<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:onClick="btnCurrent_onClick"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_weight="6"
        android:layout_height="wrap_content"
        android:shrinkColumns="0,1,2,3,4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:onClick="btnCurrent_onClick"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/eight"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:onClick="btnCurrent_onClick"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/nine"
                android:layout_weight="1"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:backgroundTint="@color/gray"
                android:onClick="btnCurrent_onClick"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/div"
                android:layout_weight="1"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:backgroundTint="@color/orange"
                android:onClick="btnCurrent_onClick"
                android:text="@string/div"
                android:textSize="30sp" />

            <Button
                android:id="@+id/ac"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:backgroundTint="@color/red"
                android:onClick="btnCurrent_onClick"
                android:text="@string/ac"
                android:textSize="30sp" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:shrinkColumns="0,1,2,3">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/four"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/gray"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/four"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/five"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/gray"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/five"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/six"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/gray"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/six"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/by"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/orange"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/by"
                        android:textSize="30sp" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/one"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/gray"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/one"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/two"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/gray"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/two"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/three"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/gray"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/three"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/minus"
                        android:layout_height="110dp"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/orange"
                        android:onClick="btnCurrent_onClick"
                        android:text="@string/minus"
                        android:textSize="30sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/plus"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:backgroundTint="@color/orange"
                android:onClick="btnCurrent_onClick"
                android:text="@string/plus"
                android:textSize="30sp" />
        </LinearLayout>

        <TableRow android:layout_width="match_parent">
            <Button
                android:id="@+id/zero"
                android:layout_weight="2"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:backgroundTint="@color/gray"
                android:onClick="btnCurrent_onClick"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/point"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:onClick="btnCurrent_onClick"
                android:text="@string/point"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equal"
                android:layout_weight="2"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:backgroundTint="@color/green"
                android:onClick="btnCurrent_onClick"
                android:text="@string/equal"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
</LinearLayout>